# Retrieval-Augmented-Generation-RAG-Agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECT_PROMPT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  README2.md  app.py  benchmark_results.csv  benchmark_results.json  demo.py  demo_rerank_2.py  docker-compose.gpu.yml  docker-compose.yml  embeddings_cache.json  gitignore  main.py  pyproject.toml  rag_app.py  rag_app10.py  rag_app6.py  rag_app8.py  rag_logs.json  requirements.txt  tool_benchmark_results.json
.github/: FUNDING.yml
.github/workflows/: test.yml
.streamlit/: config.toml
benchmark_docs/: machine-learning.md  python-language.txt  team-members.csv
docs_technical/: ALGORITHM.md  ARCHITECTURE.md  BENCHMARK.md  CONTRIBUTING.md
huggingface/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
huggingface/src/: handlers.py  theme.py  ui_builder.py
huggingface/tests/: conftest.py  test_agent.py  test_agent_tools.py  test_boundary_negative.py  test_combinations.py  test_combinations_analysis.py  test_config.py  (+12 more)
obsolete/: demo_rerank.py  demo_rerank_3.py  rag_app copy.py  rag_app11.py  rag_app2.py  rag_app4.py  rag_app5.py  rag_app5_diag.py  rag_app5_test.py  rag_app6.py  rag_app7.py  rag_app9.py  rag_app_url.py  requirements.txt
tests/: test_agent.py  test_benchmark_report.py  test_benchmarker.py  test_boundary_negative.py  test_combinations.py  test_combinations_analysis.py  test_combinations_url.py  test_contracts.py  test_contracts_pipeline.py  test_crawl.py  test_crawl_combinations.py  test_doc_types_agent.py  test_doc_types_and_modes.py  test_document_loader.py  test_file_upload.py  test_file_upload_tools.py  test_handlers.py  test_integration.py  test_integration_loader.py  test_integration_pipeline.py  test_logger.py  test_metrics.py  test_ragas_eval.py  test_regression.py  test_theme_session.py  test_tool_benchmarks.py  test_topic_search.py  test_translate_tool.py  test_ui_app.py  test_ui_components.py  test_url_ingestion.py  test_url_pipeline.py  test_vector_store.py  test_vector_store_pipeline.py
ui/: handlers.py
(+30 files in other folders)
